Source/JavaScriptCore/dfg/DFGWorklist.cpp
@@ -37,8 +37,134 @@
 
 namespace JSC { namespace DFG {
 
+class Worklist::ThreadBody : public AutomaticThread {
+public:
+    ThreadBody(const LockHolder& locker, Worklist& worklist, ThreadData& data, Box<Lock> lock, RefPtr<AutomaticThreadCondition> condition, int relativePriority)
+        : AutomaticThread(locker, lock, condition)
+        , m_worklist(worklist)
+        , m_data(data)
+        , m_relativePriority(relativePriority)
+    {
+    }
+    
+protected:
+    PollResult poll(const LockHolder& locker) override
+    {
+        if (m_worklist.m_queue.isEmpty())
+            return PollResult::Wait;
+        
+        m_plan = m_worklist.m_queue.takeFirst();
+        if (!m_plan) {
+            if (Options::verboseCompilationQueue()) {
+                m_worklist.dump(locker, WTF::dataFile());
+                dataLog(": Thread shutting down\n");
+            }
+            return PollResult::Stop;
+        }
+        RELEASE_ASSERT(m_plan->stage == Plan::Preparing);
+        m_worklist.m_numberOfActiveThreads++;
+        return PollResult::Work;
+    }
+    
+    class WorkScope;
+    friend class WorkScope;
+    class WorkScope {
+    public:
+        WorkScope(ThreadBody& thread)
+            : m_thread(thread)
+        {
+            RELEASE_ASSERT(m_thread.m_plan);
+            RELEASE_ASSERT(m_thread.m_worklist.m_numberOfActiveThreads);
+        }
+        
+        ~WorkScope()
+        {
+            LockHolder locker(*m_thread.m_worklist.m_lock);
+            m_thread.m_plan = nullptr;
+            m_thread.m_worklist.m_numberOfActiveThreads--;
+        }
+        
+    private:
+        ThreadBody& m_thread;
+    };
+    
+    WorkResult work() override
+    {
+        WorkScope workScope(*this);
+        
+        LockHolder locker(m_data.m_rightToRun);
+        {
+            LockHolder locker(*m_worklist.m_lock);
+            if (m_plan->stage == Plan::Cancelled)
+                return WorkResult::Continue;
+            m_plan->notifyCompiling();
+        }
+        
+        if (Options::verboseCompilationQueue())
+            dataLog(m_worklist, ": Compiling ", m_plan->key(), " asynchronously\n");
+        
+        RELEASE_ASSERT(!m_plan->vm->heap.isCollecting());
+        m_plan->compileInThread(*m_longLivedState, &m_data);
+        RELEASE_ASSERT(m_plan->stage == Plan::Cancelled || !m_plan->vm->heap.isCollecting());
+        
+        {
+            LockHolder locker(*m_worklist.m_lock);
+            if (m_plan->stage == Plan::Cancelled)
+                return WorkResult::Continue;
+            
+            m_plan->notifyReady();
+            
+            if (Options::verboseCompilationQueue()) {
+                m_worklist.dump(locker, WTF::dataFile());
+                dataLog(": Compiled ", m_plan->key(), " asynchronously\n");
+            }
+            
+            m_worklist.m_readyPlans.append(m_plan);
+            
+            m_worklist.m_planCompiled.notifyAll();
+        }
+        RELEASE_ASSERT(!m_plan->vm->heap.isCollecting());
+        
+        return WorkResult::Continue;
+    }
+    
+    void threadDidStart() override
+    {
+        if (Options::verboseCompilationQueue())
+            dataLog(m_worklist, ": Thread started\n");
+        
+        if (m_relativePriority)
+            changeThreadPriority(currentThread(), m_relativePriority);
+        
+        m_compilationScope = std::make_unique<CompilationScope>();
+        m_longLivedState = std::make_unique<LongLivedState>();
+    }
+    
+    void threadWillStop() override
+    {
+        if (Options::verboseCompilationQueue())
+            dataLog(m_worklist, ": Thread will stop\n");
+        
+        ASSERT(!m_plan);
+        
+        m_compilationScope = nullptr;
+        m_longLivedState = nullptr;
+        m_plan = nullptr;
+    }
+    
+private:
+    Worklist& m_worklist;
+    ThreadData& m_data;
+    int m_relativePriority;
+    std::unique_ptr<CompilationScope> m_compilationScope;
+    std::unique_ptr<LongLivedState> m_longLivedState;
+    RefPtr<Plan> m_plan;
+};
+
 Worklist::Worklist(CString worklistName)
     : m_threadName(toCString(worklistName, " Worker Thread"))
+    , m_lock(Box<Lock>::create())
+    , m_planEnqueued(AutomaticThreadCondition::create())
     , m_numberOfActiveThreads(0)
 {
 }
@@ -46,24 +172,23 @@ Worklist::Worklist(CString worklistName)
 Worklist::~Worklist()
 {
     {
-        LockHolder locker(m_lock);
+        LockHolder locker(*m_lock);
         for (unsigned i = m_threads.size(); i--;)
             m_queue.append(nullptr); // Use null plan to indicate that we want the thread to terminate.
-        m_planEnqueued.notifyAll();
+        m_planEnqueued->notifyAll(locker);
     }
     for (unsigned i = m_threads.size(); i--;)
-        waitForThreadCompletion(m_threads[i]->m_identifier);
+        m_threads[i]->m_thread->join();
     ASSERT(!m_numberOfActiveThreads);
 }
 
 void Worklist::finishCreation(unsigned numberOfThreads, int relativePriority)
 {
     RELEASE_ASSERT(numberOfThreads);
+    LockHolder locker(*m_lock);
     for (unsigned i = numberOfThreads; i--;) {
         std::unique_ptr<ThreadData> data = std::make_unique<ThreadData>(this);
-        data->m_identifier = createThread(threadFunction, data.get(), m_threadName.data());
-        if (relativePriority)
-            changeThreadPriority(data->m_identifier, relativePriority);
+        data->m_thread = adoptRef(new ThreadBody(locker, *this, *data, m_lock, m_planEnqueued, relativePriority));
         m_threads.append(WTFMove(data));
     }
 }
@@ -77,7 +202,7 @@ Ref<Worklist> Worklist::create(CString worklistName, unsigned numberOfThreads, i
 
 bool Worklist::isActiveForVM(VM& vm) const
 {
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     PlanMap::const_iterator end = m_plans.end();
     for (PlanMap::const_iterator iter = m_plans.begin(); iter != end; ++iter) {
         if (iter->value->vm == &vm)
@@ -89,7 +214,7 @@ bool Worklist::isActiveForVM(VM& vm) const
 void Worklist::enqueue(PassRefPtr<Plan> passedPlan)
 {
     RefPtr<Plan> plan = passedPlan;
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     if (Options::verboseCompilationQueue()) {
         dump(locker, WTF::dataFile());
         dataLog(": Enqueueing plan to optimize ", plan->key(), "\n");
@@ -97,12 +222,12 @@ void Worklist::enqueue(PassRefPtr<Plan> passedPlan)
     ASSERT(m_plans.find(plan->key()) == m_plans.end());
     m_plans.add(plan->key(), plan);
     m_queue.append(plan);
-    m_planEnqueued.notifyOne();
+    m_planEnqueued->notifyOne(locker);
 }
 
 Worklist::State Worklist::compilationState(CompilationKey key)
 {
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     PlanMap::iterator iter = m_plans.find(key);
     if (iter == m_plans.end())
         return NotKnown;
@@ -118,7 +243,7 @@ void Worklist::waitUntilAllPlansForVMAreReady(VM& vm)
     // After we release this lock, we know that although other VMs may still
     // be adding plans, our VM will not be.
     
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     
     if (Options::verboseCompilationQueue()) {
         dump(locker, WTF::dataFile());
@@ -140,14 +265,14 @@ void Worklist::waitUntilAllPlansForVMAreReady(VM& vm)
         if (allAreCompiled)
             break;
         
-        m_planCompiled.wait(m_lock);
+        m_planCompiled.wait(*m_lock);
     }
 }
 
 void Worklist::removeAllReadyPlansForVM(VM& vm, Vector<RefPtr<Plan>, 8>& myReadyPlans)
 {
     DeferGC deferGC(vm.heap);
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     for (size_t i = 0; i < m_readyPlans.size(); ++i) {
         RefPtr<Plan> plan = m_readyPlans[i];
         if (plan->vm != &vm)
@@ -192,7 +317,7 @@ Worklist::State Worklist::completeAllReadyPlansForVM(VM& vm, CompilationKey requ
     }
     
     if (!!requestedKey && resultingState == NotKnown) {
-        LockHolder locker(m_lock);
+        LockHolder locker(*m_lock);
         if (m_plans.contains(requestedKey))
             resultingState = Compiling;
     }
@@ -209,7 +334,7 @@ void Worklist::completeAllPlansForVM(VM& vm)
 
 void Worklist::rememberCodeBlocks(VM& vm)
 {
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     for (PlanMap::iterator iter = m_plans.begin(); iter != m_plans.end(); ++iter) {
         Plan* plan = iter->value.get();
         if (plan->vm != &vm)
@@ -236,7 +361,7 @@ void Worklist::visitWeakReferences(SlotVisitor& visitor)
 {
     VM* vm = visitor.heap()->vm();
     {
-        LockHolder locker(m_lock);
+        LockHolder locker(*m_lock);
         for (PlanMap::iterator iter = m_plans.begin(); iter != m_plans.end(); ++iter) {
             Plan* plan = iter->value.get();
             if (plan->vm != vm)
@@ -259,7 +384,7 @@ void Worklist::visitWeakReferences(SlotVisitor& visitor)
 void Worklist::removeDeadPlans(VM& vm)
 {
     {
-        LockHolder locker(m_lock);
+        LockHolder locker(*m_lock);
         HashSet<CompilationKey> deadPlanKeys;
         for (PlanMap::iterator iter = m_plans.begin(); iter != m_plans.end(); ++iter) {
             Plan* plan = iter->value.get();
@@ -306,7 +431,7 @@ void Worklist::removeDeadPlans(VM& vm)
 
 void Worklist::removeNonCompilingPlansForVM(VM& vm)
 {
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     HashSet<CompilationKey> deadPlanKeys;
     Vector<RefPtr<Plan>> deadPlans;
     for (auto& entry : m_plans) {
@@ -337,13 +462,13 @@ void Worklist::removeNonCompilingPlansForVM(VM& vm)
 
 size_t Worklist::queueLength()
 {
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     return m_queue.size();
 }
 
 void Worklist::dump(PrintStream& out) const
 {
-    LockHolder locker(m_lock);
+    LockHolder locker(*m_lock);
     dump(locker, out);
 }
 
@@ -353,83 +478,6 @@ void Worklist::dump(const LockHolder&, PrintStream& out) const
         "Worklist(", RawPointer(this), ")[Queue Length = ", m_queue.size(),
         ", Map Size = ", m_plans.size(), ", Num Ready = ", m_readyPlans.size(),
         ", Num Active Threads = ", m_numberOfActiveThreads, "/", m_threads.size(), "]");
-}
-
-void Worklist::runThread(ThreadData* data)
-{
-    CompilationScope compilationScope;
-    
-    if (Options::verboseCompilationQueue())
-        dataLog(*this, ": Thread started\n");
-    
-    LongLivedState longLivedState;
-    
-    for (;;) {
-        RefPtr<Plan> plan;
-        {
-            LockHolder locker(m_lock);
-            while (m_queue.isEmpty())
-                m_planEnqueued.wait(m_lock);
-            
-            plan = m_queue.takeFirst();
-            if (plan) {
-                RELEASE_ASSERT(plan->stage == Plan::Preparing);
-                m_numberOfActiveThreads++;
-            }
-        }
-        
-        if (!plan) {
-            if (Options::verboseCompilationQueue())
-                dataLog(*this, ": Thread shutting down\n");
-            return;
-        }
-        
-        {
-            LockHolder locker(data->m_rightToRun);
-            {
-                LockHolder locker(m_lock);
-                if (plan->stage == Plan::Cancelled) {
-                    m_numberOfActiveThreads--;
-                    continue;
-                }
-                plan->notifyCompiling();
-            }
-        
-            if (Options::verboseCompilationQueue())
-                dataLog(*this, ": Compiling ", plan->key(), " asynchronously\n");
-        
-            RELEASE_ASSERT(!plan->vm->heap.isCollecting());
-            plan->compileInThread(longLivedState, data);
-            RELEASE_ASSERT(plan->stage == Plan::Cancelled || !plan->vm->heap.isCollecting());
-            
-            {
-                LockHolder locker(m_lock);
-                if (plan->stage == Plan::Cancelled) {
-                    m_numberOfActiveThreads--;
-                    continue;
-                }
-                
-                plan->notifyReady();
-                
-                if (Options::verboseCompilationQueue()) {
-                    dump(locker, WTF::dataFile());
-                    dataLog(": Compiled ", plan->key(), " asynchronously\n");
-                }
-                
-                m_readyPlans.append(plan);
-                
-                m_planCompiled.notifyAll();
-                m_numberOfActiveThreads--;
-            }
-            RELEASE_ASSERT(!plan->vm->heap.isCollecting());
-        }
-    }
-}
-
-void Worklist::threadFunction(void* argument)
-{
-    ThreadData* data = static_cast<ThreadData*>(argument);
-    data->m_worklist->runThread(data);
 }
 
 static Worklist* theGlobalDFGWorklist;
